[gd_scene load_steps=22 format=2]

[ext_resource path="res://Objects/Lectern.png" type="Texture" id=1]
[ext_resource path="res://Objects/SpellBook.gd" type="Script" id=2]
[ext_resource path="res://UI/UItheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/paperBackground.png" type="Texture" id=4]
[ext_resource path="res://UI/explode_text.png" type="Texture" id=5]
[ext_resource path="res://UI/shield.png" type="Texture" id=6]
[ext_resource path="res://UI/exit.png" type="Texture" id=7]
[ext_resource path="res://UI/exitwithoutcircle.png" type="Texture" id=8]
[ext_resource path="res://UI/paperForeground.png" type="Texture" id=9]
[ext_resource path="res://UI/smallerText.tres" type="DynamicFont" id=10]
[ext_resource path="res://UI/select.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 16, 16 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 16, 16 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="InputEventAction" id=7]
action = "ui_cancel"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 3 )

[node name="SpellBook" type="StaticBody2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="CanvasLayer/Control"]
margin_left = 30.0
margin_top = 19.0
margin_right = 290.0
margin_bottom = 150.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 16, 37 )
patch_margin_left = 12
patch_margin_top = 33
patch_margin_right = 11
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/TextureRect"]
margin_left = 117.0
margin_right = 146.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.113725, 0.141176, 0.415686 )
custom_styles/normal = SubResource( 2 )
text = "Spellbook"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/TextureRect/Label"]
margin_left = -33.0
margin_top = 8.0
margin_right = 57.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "Click a spell to switch to it."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="CanvasLayer/Control/TextureRect"]
margin_left = 10.0
margin_top = 24.0
margin_right = 87.0
margin_bottom = 117.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explode" type="NinePatchRect" parent="CanvasLayer/Control/TextureRect/CenterContainer"]
margin_right = 77.0
margin_bottom = 44.0
size_flags_vertical = 3
texture = ExtResource( 9 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 9
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Explode" type="Button" parent="CanvasLayer/Control/TextureRect/CenterContainer/Explode"]
margin_left = 39.0
margin_top = 2.0
margin_right = 75.0
margin_bottom = 22.0
icon = ExtResource( 11 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/TextureRect/CenterContainer/Explode"]
margin_left = 3.0
margin_top = 24.0
margin_right = 74.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/normal = SubResource( 9 )
text = "Summons an explosion at nearby enemies, dealing damage."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="TextureRect" parent="CanvasLayer/Control/TextureRect/CenterContainer/Explode"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 8.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="NinePatchRect" parent="CanvasLayer/Control/TextureRect/CenterContainer"]
margin_top = 48.0
margin_right = 77.0
margin_bottom = 93.0
size_flags_vertical = 3
texture = ExtResource( 9 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 9
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Shield" type="Button" parent="CanvasLayer/Control/TextureRect/CenterContainer/Shield"]
margin_left = 39.0
margin_top = 2.0
margin_right = 75.0
margin_bottom = 22.0
theme = ExtResource( 3 )
icon = ExtResource( 11 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/TextureRect/CenterContainer/Shield"]
margin_left = 3.0
margin_top = 24.0
margin_right = 74.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "This spell casts away enemies with astounding force."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/TextureRect/CenterContainer/Shield"]
margin_left = 2.0
margin_top = 2.0
margin_right = 31.0
margin_bottom = 8.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 269.0
margin_top = 21.0
margin_right = 286.0
margin_bottom = 37.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
shortcut = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="CanvasLayer/Control/TextureRect/CenterContainer/Explode/Explode" to="." method="_on_Explode_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/TextureRect/CenterContainer/Shield/Shield" to="." method="_on_Shield_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ExitButton" to="." method="_on_ExitButton_pressed"]
